--- a/maybay2.css
+++ b/maybay2.css
@@ -1,100 +1,197 @@
-html{
+html {
     height: 100%;
-}  
-body{
-    margin:0;
-	padding:0;
+}
+
+body {
+    margin: 0;
+    padding: 0;
     font-family: Arial, sans-serif;
-    background-image: url('https://vcdn-dulich.vnecdn.net/2022/09/24/-8995-1663985544.jpg');
-	background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-	
+    background-color: orange;
 }
-.white{
-    background-color: rgba(241, 238, 238, 0.85); 
-    margin:0px 190px; 
-    height: 500px;
-    border-radius: 10px;
-    padding-top: 9px;
-    padding-bottom: 30px;
+
+.label {
+    color: rgb(59 130 246);
+    padding: 10px;
+    font-size: 21px;
 }
-.box1{
+
+li {
+    list-style: none;
+    justify-content: space-around;
+}
+
+.logo {
+    margin-top: -10px;
+}
+
+.box2 {
+    background-color: #fff;
     display: flex;
-    justify-content: space-between; 
-    font-size: 10px;
+    justify-content: space-around;
+    height: 60px;
 }
-.mau{
-    color:brown;
-}
-.item1{
-    display: inline-block;
-    margin:10px 230px;
-}
-.box2{    
-    background-color:rgb(59 130 246);
-    display: flex;
-    justify-content: space-between;  
-    border-radius: 10px;   
-    margin:0px 190px;
-}
-.list{
-    margin:0px;
-    padding:0px;
+
+.list {
+    margin: 0px;
+    padding: 0px;
     cursor: pointer;
 }
-a{
+
+.item {
+    display: inline-block;
+    padding: 0px;
     transition: opacity 0.2 ease;
+}
+
+a {
     text-decoration: none;
+    color: rgb(59 130 246);
     display: block;
-    margin: 0;
-    padding: 8px;
+    padding: 17.5px;
+    transition: opacity 0.2 ease;
     font-size: 21px;
+}
+
+a:hover {
+    background-color: rgb(59 130 246);
+    color: #fff;
+    border-radius: 10px;
+}
+
+.box4 {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px;
+    background-color: #fff;
+}
+
+.box5 {
+    height:auto;
+    width: 890px;
+    position: relative;
+    left: 310px;
+}
+.canchinh2 {
+    background-color: #fff;
+    margin: 50px 100px;
+    border-radius: 6px;
+    height: auto;
+}
+
+.canchinh4 {
+    height:2000px;
+    border: 2px solid black;
+    margin: 0px 20px 20px 20px ;
+    background-color: #b8edf5;
+}
+.chuyenbay {
+    border: 1px solid black;
+    background-color: #fff;
+    padding: 12px 10px;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.box6 {
+    border: 1px solid black;
+    background-color: #fff;
+    position: absolute;
+    left: 150px;
+    margin-top: 18px;
+    
+}
+.p2 {
+    background-color: #fff;
+    color: orange;
+    border: 2px solid orange;
+}
+
+.p3 {
+    background-color: #fff;
+    color: orange;
+    border: 2px solid orange;
+}
+
+i {
+    font-size: 22px;
+    color: orange;
+}
+
+
+h1 {
+    background-color: orange;
+    font-size: 20px;
+    padding: 10px 220px 10px 10px;
+    border-radius: 5px;
     color: #fff;
 }
-a:hover{
-    background-color:#fff;
-    color: rgb(59 130 246);
-    border-radius: 10px;   
+
+.note {
+    padding: 10px 12px;
+
 }
-.item{
-    display: inline-block;
-    padding:0px;
+
+.fa-solid {
+    color: orange;
+    margin: 0px 30px;
+}
+
+
+
+.fomnut {
+    padding: 7px 50px;
+    border-radius: 10px;
+    background-color: #63adb3;
     transition: opacity 0.2 ease;
+    font-size: 18px;
+    color: #fff;
+
 }
-.item:hover{
+
+.fomnut:hover {
+    opacity: 0.8;
+    background-color: rgb(59 130 246);
+    color: #fff;
+}
+
+
+.control {
+    padding: 8px 20px;
+    border: 2px;
+    border-radius: 10px;
+    border-style: solid;
+    font-size: 19px;
+}
+
+
+
+.box7 {
+    background-color: rgb(87, 144, 237);
+    padding: 100px;
+    border-top: 40px solid blue;
+    margin-bottom: 6px;
+    position: relative;
+    top:0;
+    border-radius: 30px 30px 0 0;
+}
+
+.show {
+
+    padding: 8px 54px;
+    border-radius: 10px;
+    border-style: solid;
+    background-color: transparent;
+    color: #fff;
+    background-color: #63adb3;
+    cursor: pointer;
+    transition: opacity 0.2 ease;
+    font-size: 16px;
+}
+
+.show:hover {
+
     opacity: 0.8;
     background-color: #fff;
-    color:rgb(59 130 246) ;
-    border-radius: 10% ; 
-} 
-/* ================================================================== */
-.p1{
-    
-    margin-bottom: 20px;
-    margin-left: 90px;
-    font-size: 26px;
-}
-.fa-solid{
-    color: red;
-    margin-right: 10px;
-}
-/* ================================================================================ */
-.box3 {
-    border-collapse: collapse;   
-    margin: 10px auto;
-    background-color: #fff;   
-}
-.th, td {   
-    padding: 12px 50px;
-}
-.th {
-    background-color:rgb(106 111 117);
-    color: #fff;
-}
-.td{
-    border: 0.1px  solid black;
-}
-.tick{
-    cursor: pointer;
+    color: rgb(59 130 246);
 }
