--- a/maybay4.css
+++ b/maybay4.css
@@ -13,9 +13,6 @@ body{
 
 .shadow{
     background-color:rgba(0, 0, 0, 0.8);
-    position: absolute;
-	left: 12%;
-	right: 12%;
 	padding:30px;
 	border-radius: 18px;
 	margin: 30px 120px 0 120px;
@@ -23,27 +20,18 @@ body{
     justify-content: space-between;
     
 } 
-.box1{
-    display: flex;
-    justify-content: space-between; 
-    font-size: 10px;
+.logo{
+	margin-top: -10px;
 }
-.mau{
-    color:brown;
-    
-}
-.item1{
-    display: inline-block;
-    margin:10px 230px;
+li{
+	list-style: none;
+	justify-content: space-around;
 }
 .box2{    
-    background-color:rgb(59 130 246);
+    background-color:#fff;
     display: flex;
-    justify-content: space-between;  
-    border-radius: 10px;     
-    width: 80%; 
-    height: 40px;
-    margin:0px 190px ;
+	justify-content: space-around;  
+    height: 60px;
 }
 .list{
     margin:0px;
@@ -51,17 +39,16 @@ body{
     cursor: pointer;
 }
 a{
-    transition: opacity 0.2 ease;
     text-decoration: none;
-    display: block;
-    margin: 0;
-    padding: 8px;
-    font-size: 21px;
-    color: #fff;
+	color:rgb(59 130 246);
+	display: block;
+	padding:17.5px;
+	transition: opacity 0.2 ease;
+	font-size: 21px;
 }
 a:hover{
-    background-color:#fff;
-    color: rgb(59 130 246);
+    background-color:rgb(59 130 246);
+    color: #fff;
     border-radius: 10px;   
 }
 .item{
@@ -69,14 +56,13 @@ a:hover{
     padding:0px;
     transition: opacity 0.2 ease;
 }
-.item:hover{
-    opacity: 0.8;
-    background-color: #fff;
-    color:rgb(59 130 246) ;
-    border-radius: 10% ;
+
+.box3{
+    margin-left: 30px;
 }
-
-
+h1{
+    color: #fff;
+}
 h2{
    margin: auto 13px auto 13px; 
    color: #fff;
@@ -85,9 +71,5 @@ h3{
     font-size: 16px;
     color: #fff;
 }
-.box4{
-    color: #fff;
-    border-left: 1px solid #fff;
-    padding-left: 30px;
-}
+
 
