--- a/maybay6.css
+++ b/maybay6.css
@@ -5,10 +5,7 @@ body{
     margin:0;
 	padding:0;
     font-family: Arial, sans-serif;
-	background-image: url('https://vcdn-vnexpress.vnecdn.net/2022/05/27/Anh-1-7673-1653619050-4228-1653624413.jpg');
-	background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+	
 }
 .logo{
 	margin-top: -10px;
@@ -22,6 +19,14 @@ body{
 li{
 	list-style: none;
 	justify-content: space-around;
+}
+.control {
+	border-radius: 10px;
+	padding: 10px 60px;
+	color: black;
+	border: none;
+	border-bottom: 1px solid black;
+	outline: none;
 }
 a{
 	text-decoration: none;
@@ -40,8 +45,8 @@ a:hover{
 	margin: 0px;
 }
 .box3 {
-    margin: 100px auto;
-    background-color: rgba(241, 238, 238, 0.89);    
+    margin: 50px auto;
+    background-color: rgb(218 188 188 / 89%);    
 }
 .th, td {   
     padding: 6px 10px;
@@ -53,7 +58,34 @@ a:hover{
 .td{
     border-top:1.7px solid black;
 }
+.note1{
+    background-color: rgb(126, 161, 195);
+    margin:0px;
+    display: flex;
+    justify-content: space-between;
+}
+input{
+	border-radius: 10px;
+	padding: 10px 60px;
+}
+.show {
+    padding: 10px 85px; 
+    border-radius: 10px;
+    border-style: solid;
+    background-color: transparent;
+    color: #fff;
+    background-color: orange;
+    cursor: pointer;
+    transition: opacity 0.2 ease;
+    font-size: 16px;
+	list-style: none;
+}
 
+.show:hover {
+    opacity: 0.8;
+    background-color: #fff;
+    color: rgb(59 130 246);
+}
 
 
 
